2004-05-18  David Ayers  <d.ayers@inode.at>

	* GSWeb.framework/GSWProcFS.h/m: Make class more portable.
	Replace all system dependent types with standard types.  Replace
	usage of NSDebugFLog with NSDebugMLog in methods.
	([GSWProcFSProcInfo filledProcInfo]): Use -processIdentifier
	instead of getpid.
	([GSWProcFSProcInfo filledProcInfoWithPID:]): Update types. Use
	standard GC macro.
	([GSWProcFSProcInfo initFilledWithPID:]): Update types.
	([GSWProcFSProcInfo description]): Use NSPageSize instead of
	getpagesize.  Remove obsolete casts.
	([GSWProcFSProcInfo contentOfProcFile:]): Use standard NSString
	API to read the file.
	([GSWProcFSProcInfo contentOfPIDFile:]): Adapt to new types and
	reformat.
	([GSWProcFSProcInfo residentMemory]),
	([GSWProcFSProcInfo sharedMemory]): Adapt to new types.
	
2004-05-16  David Wetzel <dave@turbocat.de>

	* GSWeb.framework/GSWApplication.m ([GSWApplication
	lockedInitComponentBearingFrameworksFromBundleArray:]):
	Commented support for hasGSWComponents optimization.
	
2004-05-16  David Ayers  <d.ayers@inode.at>
	    Matt Rice  <ratmice@yahoo.com>

	* config.mak.in: Replace LIBWRAP with AUX_LIBS so that they will
	be included in gsweb.make makefile fragment.
	* configure.ac: Fine tune check to test whether we need libnsl.
	* GSWeb.framework/gsweb.gsdoc: Remove obsolete documentation of
	libwrap realted build option.
	* configure: Regenerate.
	
2004-05-16  David Ayers  <d.ayers@inode.at>

	* GSWeb.framework/GNUmakefile: Make GSWDefines.h a public header.

	* GSWeb.framework/GSWAction.m,
	* GSWeb.framework/GSWApplication.m,
	* GSWeb.framework/GSWDirectAction.m,
	* GSWeb.framework/GSWSession.m,
	* GSWeb.framework/GSWTemplateParser.m: Do not initialize va_list
	with NULL.

2004-05-14   Manuel Guesdon <mguesdon@orange-concept.com>

	* GSWeb.framework/GSWHTMLTemplateParser.m:
		o fixed exception format/arguments in 
		-parser:didParseClosingDynamicTagOfType:withTemplateInfo:
		o added templateInfo in -parseHTML Exception