@@ -222,122 +222,6 @@ void NSTimeIntervalSleep(NSTimeInterval ti)
     };
 };
 
-NSString* pidproccontent(NSString* path)
-{
-  NSString* content=nil;
-  char thePath[BUFSIZ*2];
-  FILE* theFile = 0;
-  if ([path getFileSystemRepresentation:thePath
-            maxLength:sizeof(thePath)-1] == NO)
-    {
-      LOGSeriousError(@"Open (%@) attempt failed - bad path",
-                      path);
-    }
-  else
-    {
-#if     defined(__WIN32__)
-      theFile = fopen(thePath, "rb");
-#else
-      theFile = fopen(thePath, "r");
-#endif
-      if (theFile == NULL)          /* We failed to open the file. */
-        {
-          LOGSeriousError(@"Open (%s) attempt failed - %s",
-                          thePath, strerror(errno));
-        }
-      else
-        {
-          char buff[1024]="";
-          if (!fgets(buff,1024,theFile))
-            {
-              LOGSeriousError(@"Read (%s) attempt failed",thePath);
-            }
-          else
-            {
-              content=[NSString stringWithCString:buff];
-            };
-          fclose(theFile);
-        };
-    };
-  return content;
-};
-void pidstat(pid_t pid, proc_t* P)
-{
-  NSString* filename=[NSString stringWithFormat:@"/proc/%d/stat",(int)pid];
-  NSString* pidstat=pidproccontent(filename);
-  NSDebugFLog(@"pidstat=%@",pidstat);
-  NSDebugFLog(@"filename=%@",filename);
-  NSDebugFLog(@"pid=%d",(int)pid);
-  if (pidstat)
-    {
-      NSRange cmdEnd=[pidstat rangeOfString:@") "];
-      if (cmdEnd.length>0)
-        {
-          NSString* pid_cmd=[pidstat substringToIndex:cmdEnd.location];
-          NSDebugFLog(@"pid_cmd=%@",pid_cmd);
-          if (cmdEnd.location+cmdEnd.length<[pidstat length])
-            {
-              NSString* stats=[pidstat substringFromIndex:cmdEnd.location+cmdEnd.length];
-              /*
-                char* tmp = strrchr(S, ')');        // split into "PID (cmd" and "<rest>" 
-                *tmp = '\0';                        // replace trailing ')' with NUL 
-                // parse these two strings separately, skipping the leading "(". 
-                memset(P->cmd, 0, sizeof P->cmd);   // clear even though *P xcalloc'd ?! 
-                sscanf(S, "%d (%39c", &P->pid, P->cmd);
-              */
-              const char* statsChars=[stats cString];
-              NSDebugFLog(@"stats=%@",stats);
-              sscanf(statsChars,
-                     "%c %d %d %d %d %d %lu %lu %lu %lu %lu %ld %ld %ld %ld %d "
-                     "%d %lu %lu %ld %lu %lu %lu %lu %lu %lu %lu %lu %LX %LX %LX %LX %lu",
-                     &P->state, &P->ppid, &P->pgrp, &P->session, &P->tty, &P->tpgid,
-                     &P->flags, &P->min_flt, &P->cmin_flt, &P->maj_flt, &P->cmaj_flt,
-                     &P->utime, &P->stime, &P->cutime, &P->cstime, &P->priority, &P->nice,
-                     &P->timeout, &P->it_real_value, &P->start_time, &P->vsize, &P->rss,
-                     &P->rss_rlim, &P->start_code, &P->end_code, &P->start_stack,
-                     &P->kstk_esp, &P->kstk_eip, &P->signal, &P->blocked, &P->sigignore,
-                     &P->sigcatch, &P->wchan);
-              if (P->tty == 0)
-                P->tty = -1;  // the old notty val, update elsewhere bef. moving to 0 
-              /*			  if (linux_version_code < LINUX_VERSION(1,3,39))
-                                          {
-                                          P->priority = 2*15 - P->priority;       // map old meanings to new 
-                                          P->nice = 15 - P->nice;
-                                          }
-                                          if (linux_version_code < LINUX_VERSION(1,1,30) && P->tty != -1)
-                                          P->tty = 4*0x100 + P->tty;              // when tty wasn't full devno 
-              */
-              NSDebugFLog(@"P->vsize=%lu",P->vsize);
-              NSDebugFLog(@"P->rss=%lu",P->rss);
-            };
-        };
-    };
-};
-
-void pidstatm(pid_t pid, proc_t* P)
-{
-  NSString* filename=[NSString stringWithFormat:@"/proc/%d/statm",(int)pid];
-  NSString* pidstat=pidproccontent(filename);
-  NSDebugFLog(@"pidstat=%@",pidstat);
-  NSDebugFLog(@"filename=%@",filename);
-  NSDebugFLog(@"pid=%d",(int)pid);
-  if (pidstat)
-    {
-      const char* statsChars=[pidstat cString];
-      NSDebugFLog(@"pidstat=%@",pidstat);
-      sscanf(statsChars, "%ld %ld %ld %ld %ld %ld %ld",
-             &P->size, &P->resident, &P->share,
-             &P->trs, &P->lrs, &P->drs, &P->dt);
-      NSDebugFLog(@"P->size=%ld",P->size);
-      NSDebugFLog(@"P->resident=%ld",P->resident);
-      NSDebugFLog(@"P->share=%ld",P->share);
-      NSDebugFLog(@"P->trs=%ld",P->trs);
-      NSDebugFLog(@"P->lrs=%ld",P->lrs);
-      NSDebugFLog(@"P->drs=%ld",P->drs);
-      NSDebugFLog(@"P->dt=%ld",P->dt);	  
-    };
-};
-
 //--------------------------------------------------------------------
 void StackTraceIFND()
 {
